[package]
name = "grpc-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
name = "grpc-tonic-server"
path = "src/server.rs"

[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
name = "grpc-tonic-client"
path = "src/client.rs"

[dependencies]
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
